fixed player controls style on firefox mobile

--- a/src/assets/styles/components/player/_player.scss
+++ b/src/assets/styles/components/player/_player.scss
@@ -60,6 +60,7 @@
             fill: $brand-secondary;
             flex: 1;
             height: 50px;
+            border-radius: 0;
 
             &.is-active {
                 background-color: lighten($brand-primary, 20%);
